package Model.VaderBlaster;

public interface VaderBlasterAnimStrategy {

    void animate();
}
