@startuml

title __VADERBLASTER's Class Diagram__\n

  namespace Model {
    namespace Vader {
      namespace laster {
        class Model.VaderBlaster.VaderBlaster {
            {static} + INIT_MISSILE_SIZE : int
            {static} + MAX_MISSILE_SIZE : int
            {static} + STATE_DONE : int
            {static} + STATE_EXPLODING : int
            {static} + STATE_SHOOTING : int
            {static} + UNIT_MOVE : int
            {static} + vader : Vader
            ~ color : Color
            ~ size : int
            ~ state : int
            ~ target : Float
            + VaderBlaster()
            + getCollisionRadius()
            + render()
            + update()
            - updateState()
        }
      }
    }
  }
  

  namespace Model {
    namespace Vader {
      namespace laster {
        class Model.VaderBlaster.VaderBlasterAnimExploding {
            + VaderBlasterAnimExploding()
            + animate()
        }
      }
    }
  }
  

  namespace Model {
    namespace Vader {
      namespace laster {
        class Model.VaderBlaster.VaderBlasterAnimShooting {
            + VaderBlasterAnimShooting()
            + animate()
        }
      }
    }
  }
  

  namespace Model {
    namespace Vader {
      namespace laster {
        interface Model.VaderBlaster.VaderBlasterAnimStrategy {
            {abstract} + animate()
        }
      }
    }
  }
  

  Model.VaderBlaster.VaderBlaster -up-|> Model.GameFigure
  Model.VaderBlaster.VaderBlaster o-- Model.VaderBlaster.VaderBlasterAnimStrategy : animStrategy
  Model.VaderBlaster.VaderBlasterAnimExploding .up.|> Model.VaderBlaster.VaderBlasterAnimStrategy
  Model.VaderBlaster.VaderBlasterAnimExploding o-- Model.VaderBlaster.VaderBlaster : context
  Model.VaderBlaster.VaderBlasterAnimShooting .up.|> Model.VaderBlaster.VaderBlasterAnimStrategy
  Model.VaderBlaster.VaderBlasterAnimShooting o-- Model.VaderBlaster.VaderBlaster : context


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
